# liquidation-alerter

./: .env.example  Dockerfile  LICENSE  README.md  implementation_plan.md.resolved  pyproject.toml  walkthrough.md
app/: config.py  database.py  main.py
app/bot/: handler.py  messages.py
app/core/: alerter.py  analytics.py  cascade.py  engine.py  health.py
app/protocols/: aave_v2.py  aave_v3.py  base.py  compound_v2.py  compound_v3.py  maker.py  morpho.py
app/services/: cache.py  chainlink.py  metrics.py  multicall.py  price.py  reorg.py  rpc.py  token_metadata.py  uniswap_oracle.py
tests/: conftest.py  test_adapters.py  test_alerter.py  test_analytics.py  test_cascade.py  test_health.py  test_integration.py  test_unified_health.py
